<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.danielvick.maybe2048.GameActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <TableRow
            android:id="@+id/TableRow0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffee00">
            <Button
                android:id="@+id/R0C0"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R0C0"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R0C1"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R0C1"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R0C2"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R0C2"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R0C3"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R0C3"
                android:textSize="30dp"
                />


        </TableRow>

        <TableRow
            android:id="@+id/TableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffee00">
            <Button
                android:id="@+id/R1C0"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R1C0"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R1C1"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R1C1"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R1C2"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R1C2"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R1C3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/R1C3"
                android:textSize="30dp"
                />


        </TableRow>

        <TableRow
            android:id="@+id/TableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffee00">
            <Button
                android:id="@+id/R2C0"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R2C0"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R2C1"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R2C1"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R2C2"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R2C2"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R2C3"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R2C3"
                android:textSize="30dp"
                />


        </TableRow>

        <TableRow
            android:id="@+id/TableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffee00">
            <Button
                android:id="@+id/R3C0"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R3C0"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R3C1"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R3C1"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R3C2"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R3C2"
                android:textSize="30dp"
                />
            <Button
                android:id="@+id/R3C3"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:text="@string/R3C3"
                android:textSize="30dp"
                />


        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/BottomButtons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/MiddleButtons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:id="@+id/Down"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MiddleButtons"
        android:layout_below="@+id/TopButtons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:id="@+id/Left" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Right"/>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:id="@+id/TopButtons">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:id="@+id/Up"/>


    </LinearLayout>

</RelativeLayout>
